--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Room_LiveData_Coroutines_MVVM"
+        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar.Bridge"
         tools:targetApi="31">
         <activity
+            android:name=".activities.AddNoteActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".activities.UpdateNoteActivity"
+            android:exported="false" />
+
+
+        <activity
+
             android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
